
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "replay_decoder"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
haxball-replay-decoder = "=0.1.0"
napi                   = "3.0.0"
napi-derive            = "3.0.0"
serde                  = { version = "1", features = ["derive"] }
serde_json             = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
